# rusty-trading

./: Cargo.toml  README.md
aggregator/: Cargo.toml
aggregator/src/: base.rs  defillama.rs  lib.rs  token_terminal.rs
core/: Cargo.toml
core/src/: lib.rs  rate_limiter.rs  result.rs
exchanges/: Cargo.toml
exchanges/src/: binance.rs  exchange.rs  lib.rs
