# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["exchanges", "core", "aggregator"]

[workspace.package]
version = "0.1.0"
authors = ["trading developers"]
license = "MIT/Apache-2.0"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]

[workspace.dependencies]
tokio = { version = "1.29.1", features = ["full", "rt", "macros"] }
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5.0"
async-trait = "0.1.57"
jsonrpc-core = "18.0.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1"
chrono = "0.4.26"
