[package]
name = "trading-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
hyper.workspace = true
async-trait.workspace = true
tokio.worksapce = true
thiserror.worksapce = true
libmath = "0.2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }